--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 <div class="flex flex-col items-center gap-2">
                     <div class="h-44 w-44 animate-borderUser flex items-center justify-center rounded-f p-2 rounded-full origin-center relative">
                         <div class="bg-green-700 rounded-full w-full h-full overflow-hidden flex items-center justify-center p-4">
-                            <img src="./assets/user.png" alt="User login" class="w-full h-full object-cover">
+                            <img src="../public/../assets/user.png" alt="User login" class="w-full h-full object-cover">
                         </div>
                     </div>
                     <h1 class="text-green-900 font-bold uppercase text-xl">Login</h1>
@@ -51,7 +51,7 @@
 
         <section class="flex-1 hidden md:flex bg-green-800 p-4 h-full items-center justify-center flex-col gap-8">
             <h1 class="text-white text-2xl text-center max-w-md">A sustentabilidade se resume em três palavras: <strong class="text-green-200">reduzir, reusar, reciclar.</strong></h1>
-            <img src="./assets/sustentabilidade.png" alt="Palmeiras logo"
+            <img src="../public/../assets/sustentabilidade.png" alt="Palmeiras logo"
             class="w-full max-w-lg"/>
         </section>
     </main>
